Wed Oct  8 09:14:10 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/Makefile:
	  Added Kokyu_dsrt_schedulers subdirectory to DIRS.

Wed Oct  8 08:09:11 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/Kokyu_dsrt_schedulers/Kokyu_DSRT_Schedulers.dsp
	* examples/Kokyu_dsrt_schedulers/Kokyu_DSRT_Schedulers.dsw
	* examples/Kokyu_dsrt_schedulers/Kokyu_DSRT_Schedulers.mpc
	* examples/Kokyu_dsrt_schedulers/Kokyu_dsrt_schedulers_export.h 
	* examples/Kokyu_dsrt_schedulers/Makefile.Kokyu_DSRT_Schedulers
	* examples/Kokyu_dsrt_schedulers/Makefile
	* examples/Kokyu_dsrt_schedulers/README
	* examples/Kokyu_dsrt_schedulers/Kokyu_qosC.cpp
	* examples/Kokyu_dsrt_schedulers/Kokyu_qosC.h
	* examples/Kokyu_dsrt_schedulers/Kokyu_qosC.i
	* examples/Kokyu_dsrt_schedulers/Kokyu_qos.pidl
	* examples/Kokyu_dsrt_schedulers/Kokyu_qosC.h.diff
	* examples/Kokyu_dsrt_schedulers/FP_Scheduler.cpp
	* examples/Kokyu_dsrt_schedulers/FP_Scheduler.h
	* examples/Kokyu_dsrt_schedulers/FP_SchedulingC.cpp
	* examples/Kokyu_dsrt_schedulers/FP_SchedulingC.h
	* examples/Kokyu_dsrt_schedulers/FP_SchedulingC.i
	* examples/Kokyu_dsrt_schedulers/FP_Scheduling.pidl
	* examples/Kokyu_dsrt_schedulers/FP_SchedulingC.h.diff
	* examples/Kokyu_dsrt_schedulers/MIF_Scheduler.cpp
	* examples/Kokyu_dsrt_schedulers/MIF_Scheduler.h
	* examples/Kokyu_dsrt_schedulers/MIF_SchedulingC.cpp
	* examples/Kokyu_dsrt_schedulers/MIF_SchedulingC.h
	* examples/Kokyu_dsrt_schedulers/MIF_SchedulingC.i
	* examples/Kokyu_dsrt_schedulers/MIF_Scheduling.pidl
	* examples/Kokyu_dsrt_schedulers/MIF_SchedulingC.h.diff
	* examples/Kokyu_dsrt_schedulers/MUF_Scheduler.cpp
	* examples/Kokyu_dsrt_schedulers/MUF_Scheduler.h
	* examples/Kokyu_dsrt_schedulers/MUF_SchedulingC.cpp
	* examples/Kokyu_dsrt_schedulers/MUF_SchedulingC.h
	* examples/Kokyu_dsrt_schedulers/MUF_SchedulingC.i
	* examples/Kokyu_dsrt_schedulers/MUF_Scheduling.pidl
	* examples/Kokyu_dsrt_schedulers/MUF_SchedulingC.h.diff