@@ -1,3 +1,8 @@
+Wed Oct  8 14:26:42 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>
+
+	* tao/CORBALOC_Parser.cpp:
+	  Added support for corbaloc::sciop.
+
 Wed Oct  8 09:14:10 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
 
 	* examples/Makefile:
